--- a/www/media/css/main.css
+++ b/www/media/css/main.css
@@ -7,6 +7,16 @@
 
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
-	padding-top: 50px;
-	padding-bottom: 20px;
+	/*padding-top: 50px;*/
+	/*padding-bottom: 20px;*/
+}
+
+/* Table */
+.table > thead > tr > th,
+.table > tbody > tr > th,
+.table > tfoot > tr > th,
+.table > thead > tr > td,
+.table > tbody > tr > td,
+.table > tfoot > tr > td {
+	vertical-align: middle;
 }
