--- a/www/media/css/main.less
+++ b/www/media/css/main.less
@@ -21,6 +21,12 @@ body {
 	vertical-align: middle;
 }
 
+// Navbar
+.blog-selector {
+	margin: 14px 5px 5px 20px;
+	padding: 0;
+}
+
 /* Editor */
 .editor-toolbar {
 	padding-bottom: 5px;
@@ -84,6 +90,11 @@ body {
 
 		&:first-child {
 			margin-top: 0;
+		}
+
+		img:only-child {
+			display: block;
+			margin: 0 auto;
 		}
 	}
 
