--- a/www/media/css/main.less
+++ b/www/media/css/main.less
@@ -18,6 +18,12 @@ body {
 	/*padding-bottom: 20px;*/
 }
 
+// Layout
+// ========================================================
+.mini-navbar .pace .pace-progress {
+	left: 70px;
+}
+
 /* Table */
 .table > thead > tr > th,
 .table > tbody > tr > th,
@@ -219,4 +225,34 @@ body.mini-navbar .navbar-default ul.nav.edit-menu {
 	}
 }
 
+// Authors
+// =====================================================
+
+.autocomplete-suggestion {
+	background-color: white;
+	border-bottom: 1px solid #eee;
+	border-left: 1px solid #eee;
+	border-right: 1px solid #eee;
+	padding: 5px 10px;
+
+	small {
+		font-size: .7em;
+		color: #999;
+		display: inline-block;
+	}
+
+	img {
+		margin-right: 10px;
+		border-radius: 100%;
+	}
+}
+
+.autocomplete-selected {
+	background-color: #1ab394;
+	color: white;
+
+	small {
+		color: #eee;
+	}
+}
 
