--- a/www/media/css/site/site.less
+++ b/www/media/css/site/site.less
@@ -270,13 +270,11 @@ body {
 }
 
 .banner-cover {
-	background-color: #000;
-	opacity: .4;
+	background-color: rgba(0,0,0,.5);
 }
 
 .banner-trans {
 	// background-color: red;
-
 }
 
 //@media (max-width: 767px) {
