--- a/www/media/css/front/default.less
+++ b/www/media/css/front/default.less
@@ -16,6 +16,14 @@
 	font-family: 'Oswald', 'Adobe 繁黑體 Std', 'AdobeFanHeitiStd-Bold', 'LiHei Pro', "Xin6", '微軟正黑體', sans-serif;
 }
 
+.article-font() {
+	font-family: 'Helvetica Neue','Heiti TC', 'He', '微軟正黑體', sans-serif;
+}
+
+.article-title-font() {
+	font-family: 'Roboto', 'Adobe 繁黑體 Std', 'AdobeFanHeitiStd-Bold', 'LiHei Pro', "Xin6", '微軟正黑體', sans-serif;
+}
+
 // Global
 // ----------------------------------
 html, body {
@@ -141,31 +149,30 @@ dl {
 		background-color: #ffffff;
 	}
 
-	h1#blog-title {
+	#blog-title {
 		margin: 0;
 		.body-font();
 		text-transform: uppercase;
 		font-weight: 700;
 		display: inline;
-
+		font-size: .9em;
+		line-height: 1;
 
 		a {
-			font-size: .7em;
-		}
-
-		small.ul-text-mute {
-			font-size: 16px;
-			font-weight: normal;
-			color: #ccc;
-			margin-top: 12px;
-			display: inline-block;
-			text-transform: none;
-			float: left;
+			font-size: 26px;
 		}
 	}
 
+	#blog-sub-title {
+		float: left;
+		margin-top: 17px;
+		color: #ccc;
+		font-size: 23px;
+		font-weight: 300;
+	}
+
 	.uk-navbar-brand {
-		height: 70px;
+		height: auto;
 	}
 
 	.uk-navbar-brand img {
@@ -174,11 +181,11 @@ dl {
 	}
 
 	.uk-navbar-nav > li > a {
-		font-family: 'Roboto', 'LiHei Pro', 'Heiti TC', 'Xin6', '微軟正黑體', sans-serif;
+		.body-font();
 		height: 70px;
 		font-size: 14px;
 		text-transform: uppercase;
-		padding-top: 18px;
+		padding-top: 16px;
 		font-weight: 600;
 	}
 
@@ -195,35 +202,6 @@ dl {
 		line-height: 140%;
 	}
 
-	&.home {
-		background: transparent;
-		position: absolute;
-		top: 0px;
-		width: 100%;
-		color: #fff;
-
-		a {
-			color: #715E49;
-
-			&:hover {
-				background: transparent;
-				color: #333;
-
-				span.menu-item-sub-title {
-					color: #333;
-					opacity: .84;
-					.transition(.5s);
-				}
-			}
-		}
-
-		span.menu-item-sub-title {
-			color: #715E49;
-			opacity: .84;
-			.transition(.5s);
-		}
-	}
-
 	.uk-navbar-toggle {
 		margin-top: 15px;
 	}
@@ -233,6 +211,7 @@ dl {
 			position: absolute;
 			width: 100%;
 			margin: 0;
+			margin-top: 70px;
 			left: 0;
 			background-color: #fff;
 			border-top: 1px solid #eee;
@@ -255,124 +234,316 @@ dl {
 }
 
 #banner {
-	background: url(../media/img/banner/banner-2000.jpg) center center no-repeat;
-	// min-height: 550px;
+	background: #444 center center no-repeat;
+	min-height: 200px;
 }
 
 @media (max-width: 767px) {
-	.home + #banner {
-		background-image: url(../media/img/banner/banner-mobile.jpg) !important;
-		background-size: auto 100%;
+	.mobile-button {
+		position: absolute;
+		top: 0px;
+		right: 17px;
+	}
+
+	#blog-title {
+		margin-top: 20px;
+
+		a {
+			font-size: 18px;
+			margin-left: 28px;
+			width: 220px;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			word-break: break-all;
+		}
+	}
+}
+
+@media (max-width: 1200px) {
+	#blog-sub-title {
+		display: none;
+	}
+}
+
+.home {
+	#header {
+		background: transparent;
+		position: absolute;
+		top: 0px;
+		width: 100%;
+		color: #fff;
+		text-align: center;
+
+		#blog-title {
+			display: block;
+			margin-top: 170px;
+			margin-bottom: 10px;
+
+			a {
+				font-size: 100px;
+			}
+
+			.uk-navbar-brand {
+				float: none;
+			}
+		}
+
+		#blog-sub-title {
+			font-size: 30px;
+			font-weight: 300;
+			color: rgba(255,255,255,.9);
+			float : none;
+		}
+
+		#mainmenu {
+			float: none;
+			margin-top: 10px;
+			// margin-left: 50%;
+
+			> li {
+				float: none;
+				display: inline-block;
+			}
+		}
+
+		a {
+			color: #fff;
+
+			&:hover,
+			&:focus {
+				background: transparent;
+				color: rgba(255,255,255,.7);
+			}
+		}
+
+		@media (max-width: 1200px) {
+			#blog-title {
+				margin-top: 50px;
+
+				a {
+					font-size: 70px;
+					height: 40px;
+				}
+			}
+
+			#blog-sub-title {
+				// margin-top: 0;
+			}
+
+			#mainmenu > li > a {
+				height: 40px;
+				padding-top: 0;
+			}
+		}
+
+		@media (max-width: 767px) {
+			#mainmenu > li > a {
+				color: #000;
+				border-top: 1px solid #eee;
+			}
+
+			.mobile-button {
+				position: absolute;
+				top: 0px;
+				right: 17px;
+			}
+
+			#blog-sub-title {
+				display: none;
+			}
+
+			#blog-title {
+				margin-top: 20px;
+
+				a {
+					font-size: 18px;
+				}
+			}
+		}
+	}
+
+	#banner {
+		min-height: 0;
+	}
+
+	.banner-inner {
+		background-color: rgba(0,0,0,.5);
+// 		height: 500px;
+		padding: 15% 0;
 	}
 }
 
 #main-body {
 	padding-top: 50px;
+}
 
-	h1.page-title {
-		text-align: center;
-		margin-bottom: 0.3em;
-	}
+.page-title {
+	text-align: center;
+	margin-bottom: 0.3em;
+}
 
-	h2.sub-title {
-		text-align: center;
-		margin-top: 0;
-		font-weight: 300;
-		// text-transform: uppercase;
-		color: #999;
-		.body-font();
-	}
+.sub-title {
+	text-align: center;
+	margin-top: 0;
+	font-weight: 300;
+	// text-transform: uppercase;
+	color: #999;
+	.body-font();
 }
 
 .main-block {
-	padding: 75px 0;
+	// padding: 75px 0;
 }
 
-// Features
-// ---------------------------------------------------------
-#features {
-	h2 {
-		font-size: 36px;
-	}
-
-	.uk-container {
-		max-width: 1200px;
-	}
-
-	.feature-item {
-		line-height: 200%;
-		margin: 75px 0;
-	}
-
-	margin-bottom: 75px;
+.article-detail {
+	margin-top: 70px;
+	margin-bottom: 70px;
 }
 
-.feature-block {
-	padding: 19% 0;
-	text-align: center;
-	color: #ffffff;
+// Article
+// --------------------------------------------------------------------------
+.page-title {
+	font-size: 48px;
+	line-height: 1.3;
+}
 
-	h1, h2, h3, h4 {
-		color: #fff;
-		margin-top: 1em;
+.article-content {
+	margin-bottom: 70px;
+
+	.article-font();
+
+	h1, h2, h3, h4, h5, h6 {
+		line-height: 1.5;
+		.article-title-font();
+		font-weight: 700;
 	}
 
-	h2 {
-		font-size: 36px;
+	:not(pre) code {
+		font-size: inherit;
+		color: #666;
+		background-color: #eee;
+		padding: 1px 8px;
+		word-wrap: break-word;
+		white-space: normal;
 	}
 
-	text-shadow: 1px 1px 3px #000;
-	.title-font();
-}
-
-#what-we-do {
-	background-color: #999;
-	//color: #333;
-	h1, h2, h3, h4 {
-		//color: #333;
-		margin-top: 1em;
+	em {
+		color: #000;
 	}
-	background: url(../media/img/banner/feature-1.jpg) center center no-repeat;
-}
 
-#our-feature {
-	background-color: #666;
-	background: url(../media/img/banner/feature-2.jpg) center center no-repeat;
-}
+	p {
+		margin: 1.8em 0;
+		word-wrap: break-word;
 
-#our-concept {
-	background-color: #999;
-	background: url(../media/img/banner/feature-3.jpg) center center no-repeat;
-}
-// ---------------------------------------------------------
-// End Features
+		img:only-child {
+			display: block;
+			margin: 0 auto;
+		}
+	}
 
-// Basic page
-.basic-layout {
-
-	h1, h2, h3 {
+	// Table
+	/*
+ * 1. Remove most spacing between table cells.
+ * 2. Block element behavior
+ * 3. Style
+ */
+	table {
+		/* 1 */
+		border-collapse: collapse;
+		border-spacing: 0;
+		/* 2 */
+		width: 100%;
+		/* 3 */
+		margin-bottom: 15px;
+	}
+	/*
+	 * Add margin if adjacent element
+	 */
+	* + table {
+		margin-top: 15px;
+	}
+	table th,
+	table td {
+		padding: 8px 8px;
+	}
+	/*
+	 * Set alignment
+	 */
+	table th {
+		border-bottom: 1px solid #e5e5e5;
 		text-align: center;
 	}
+	table td {
+		vertical-align: top;
+		border-bottom: 1px solid #e5e5e5;
+	}
+	table thead th {
+		vertical-align: bottom;
+	}
+	/*
+	 * Caption and footer
+	 */
+	table caption,
+	table tfoot {
+		font-size: 12px;
+		font-style: italic;
+	}
+	table caption {
+		text-align: left;
+		color: #999999;
+	}
+	/* Sub-modifier: `uk-table-middle`
+	 ========================================================================== */
+	table,
+	td {
+		vertical-align: middle;
+	}
+	/* Modifier: `uk-table-striped`
+	 ========================================================================== */
+	tbody tr:nth-of-type(odd) {
+		background: #f5f5f5;
+	}
+	/* Modifier: `uk-table-condensed`
+	 ========================================================================== */
+	td {
+		padding: 4px 8px;
+	}
 
-	article.article-content {
-		margin-top: 50px;
+	// Code
+	pre > code.hljs {
+		margin: -10px;
+		padding: 20px;
+		font-size: 15px;
+		font-family: "monako", consolas, monspace;
 	}
 }
 
-// Courses page
-.courses-layout {
-	h2.category-title {
-		margin-top: 50px;
-	}
-
-	.course-item {
-		margin-top: 30px;
-	}
+.article-author-profile {
+	margin-top: 70px;
 }
 
-.course-logo {
-	margin-bottom: 50px;
-	width: 550px;
+#control-tools {
+	h4 {
+		display: none;
+	}
+
+	.dashboard-button {
+		position: fixed;
+		top: 20px;
+		left: 20px;
+		display: inline-block;
+		color: #fff;
+		font-weight: 800;
+		background-color: rgb(0,0,0);
+		opacity: .2;
+		padding: 3px 6px;
+		border-radius: 5px;
+
+		&:hover {
+			text-decoration: none;
+			opacity: 1;
+		}
+	}
 }
 
 #footer {
