--- a/www/media/css/main.less
+++ b/www/media/css/main.less
@@ -247,6 +247,55 @@ body.mini-navbar .navbar-default ul.nav.edit-menu {
 			color: #aaa;
 		}
 	}
+
+	// Table
+	table {
+		background-color: transparent;
+	}
+	caption {
+		padding-top: 8px;
+		padding-bottom: 8px;
+		color: #777;
+		text-align: left;
+	}
+	th {
+		text-align: left;
+	}
+	table {
+		width: 100%;
+		max-width: 100%;
+		margin-bottom: 20px;
+	}
+	table > thead > tr > th,
+	table > tbody > tr > th,
+	table > tfoot > tr > th,
+	table > thead > tr > td,
+	table > tbody > tr > td,
+	table > tfoot > tr > td {
+		padding: 8px;
+		line-height: 1.42857143;
+		vertical-align: top;
+		border-top: 1px solid #ddd;
+	}
+	table > thead > tr > th {
+		vertical-align: bottom;
+		border-bottom: 2px solid #ddd;
+	}
+	table {
+		border: 1px solid #ddd;
+	}
+	table > thead > tr > th,
+	table > tbody > tr > th,
+	table > tfoot > tr > th,
+	table > thead > tr > td,
+	table > tbody > tr > td,
+	table > tfoot > tr > td {
+		border: 1px solid #ddd;
+	}
+	table > thead > tr > th,
+	table > thead > tr > td {
+		border-bottom-width: 2px;
+	}
 }
 
 // Authors
