--- a/www/media/css/front/default.css
+++ b/www/media/css/front/default.css
@@ -101,38 +101,38 @@ dl dd {
 #header.uk-navbar {
   background-color: #ffffff;
 }
-#header h1#blog-title {
+#header #blog-title {
   margin: 0;
   font-family: 'Roboto', 'Heiti TC', '微軟正黑體', sans-serif;
   text-transform: uppercase;
   font-weight: 700;
   display: inline;
+  font-size: .9em;
+  line-height: 1;
 }
-#header h1#blog-title a {
-  font-size: .7em;
+#header #blog-title a {
+  font-size: 26px;
 }
-#header h1#blog-title small.ul-text-mute {
-  font-size: 16px;
-  font-weight: normal;
-  color: #ccc;
-  margin-top: 12px;
-  display: inline-block;
-  text-transform: none;
+#header #blog-sub-title {
   float: left;
+  margin-top: 17px;
+  color: #ccc;
+  font-size: 23px;
+  font-weight: 300;
 }
 #header .uk-navbar-brand {
-  height: 70px;
+  height: auto;
 }
 #header .uk-navbar-brand img {
   max-height: 100%;
   padding: 10px;
 }
 #header .uk-navbar-nav > li > a {
-  font-family: 'Roboto', 'LiHei Pro', 'Heiti TC', 'Xin6', '微軟正黑體', sans-serif;
+  font-family: 'Roboto', 'Heiti TC', '微軟正黑體', sans-serif;
   height: 70px;
   font-size: 14px;
   text-transform: uppercase;
-  padding-top: 18px;
+  padding-top: 16px;
   font-weight: 600;
 }
 #header span.menu-item-title {
@@ -146,30 +146,6 @@ dl dd {
   display: block;
   line-height: 140%;
 }
-#header.home {
-  background: transparent;
-  position: absolute;
-  top: 0px;
-  width: 100%;
-  color: #fff;
-}
-#header.home a {
-  color: #715E49;
-}
-#header.home a:hover {
-  background: transparent;
-  color: #333;
-}
-#header.home a:hover span.menu-item-sub-title {
-  color: #333;
-  opacity: .84;
-  transition: all 0.5s;
-}
-#header.home span.menu-item-sub-title {
-  color: #715E49;
-  opacity: .84;
-  transition: all 0.5s;
-}
 #header .uk-navbar-toggle {
   margin-top: 15px;
 }
@@ -178,6 +154,7 @@ dl dd {
     position: absolute;
     width: 100%;
     margin: 0;
+    margin-top: 70px;
     left: 0;
     background-color: #fff;
     border-top: 1px solid #eee;
@@ -195,96 +172,261 @@ dl dd {
   }
 }
 #banner {
-  background: url(../media/img/banner/banner-2000.jpg) center center no-repeat;
+  background: #444444 center center no-repeat;
+  min-height: 200px;
 }
 @media (max-width: 767px) {
-  .home + #banner {
-    background-image: url(../media/img/banner/banner-mobile.jpg) !important;
-    background-size: auto 100%;
+  .mobile-button {
+    position: absolute;
+    top: 0px;
+    right: 17px;
   }
+  #blog-title {
+    margin-top: 20px;
+  }
+  #blog-title a {
+    font-size: 18px;
+    margin-left: 28px;
+    width: 220px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-break: break-all;
+  }
+}
+@media (max-width: 1200px) {
+  #blog-sub-title {
+    display: none;
+  }
+}
+.home #header {
+  background: transparent;
+  position: absolute;
+  top: 0px;
+  width: 100%;
+  color: #fff;
+  text-align: center;
+}
+.home #header #blog-title {
+  display: block;
+  margin-top: 170px;
+  margin-bottom: 10px;
+}
+.home #header #blog-title a {
+  font-size: 100px;
+}
+.home #header #blog-title .uk-navbar-brand {
+  float: none;
+}
+.home #header #blog-sub-title {
+  font-size: 30px;
+  font-weight: 300;
+  color: rgba(255, 255, 255, 0.9);
+  float: none;
+}
+.home #header #mainmenu {
+  float: none;
+  margin-top: 10px;
+}
+.home #header #mainmenu > li {
+  float: none;
+  display: inline-block;
+}
+.home #header a {
+  color: #fff;
+}
+.home #header a:hover,
+.home #header a:focus {
+  background: transparent;
+  color: rgba(255, 255, 255, 0.7);
+}
+@media (max-width: 1200px) {
+  .home #header #blog-title {
+    margin-top: 50px;
+  }
+  .home #header #blog-title a {
+    font-size: 70px;
+    height: 40px;
+  }
+  .home #header #mainmenu > li > a {
+    height: 40px;
+    padding-top: 0;
+  }
+}
+@media (max-width: 767px) {
+  .home #header #mainmenu > li > a {
+    color: #000;
+    border-top: 1px solid #eee;
+  }
+  .home #header .mobile-button {
+    position: absolute;
+    top: 0px;
+    right: 17px;
+  }
+  .home #header #blog-sub-title {
+    display: none;
+  }
+  .home #header #blog-title {
+    margin-top: 20px;
+  }
+  .home #header #blog-title a {
+    font-size: 18px;
+  }
+}
+.home #banner {
+  min-height: 0;
+}
+.home .banner-inner {
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 15% 0;
 }
 #main-body {
   padding-top: 50px;
 }
-#main-body h1.page-title {
+.page-title {
   text-align: center;
   margin-bottom: 0.3em;
 }
-#main-body h2.sub-title {
+.sub-title {
   text-align: center;
   margin-top: 0;
   font-weight: 300;
   color: #999;
   font-family: 'Roboto', 'Heiti TC', '微軟正黑體', sans-serif;
 }
-.main-block {
-  padding: 75px 0;
+.article-detail {
+  margin-top: 70px;
+  margin-bottom: 70px;
 }
-#features {
-  margin-bottom: 75px;
+.page-title {
+  font-size: 48px;
+  line-height: 1.3;
 }
-#features h2 {
-  font-size: 36px;
+.article-content {
+  margin-bottom: 70px;
+  font-family: 'Helvetica Neue', 'Heiti TC', 'He', '微軟正黑體', sans-serif;
+  /*
+ * 1. Remove most spacing between table cells.
+ * 2. Block element behavior
+ * 3. Style
+ */
+  /*
+	 * Add margin if adjacent element
+	 */
+  /*
+	 * Set alignment
+	 */
+  /*
+	 * Caption and footer
+	 */
+  /* Sub-modifier: `uk-table-middle`
+	 ========================================================================== */
+  /* Modifier: `uk-table-striped`
+	 ========================================================================== */
+  /* Modifier: `uk-table-condensed`
+	 ========================================================================== */
 }
-#features .uk-container {
-  max-width: 1200px;
+.article-content h1,
+.article-content h2,
+.article-content h3,
+.article-content h4,
+.article-content h5,
+.article-content h6 {
+  line-height: 1.5;
+  font-family: 'Roboto', 'Adobe 繁黑體 Std', 'AdobeFanHeitiStd-Bold', 'LiHei Pro', "Xin6", '微軟正黑體', sans-serif;
+  font-weight: 700;
 }
-#features .feature-item {
-  line-height: 200%;
-  margin: 75px 0;
+.article-content :not(pre) code {
+  font-size: inherit;
+  color: #666;
+  background-color: #eee;
+  padding: 1px 8px;
+  word-wrap: break-word;
+  white-space: normal;
 }
-.feature-block {
-  padding: 19% 0;
+.article-content em {
+  color: #000;
+}
+.article-content p {
+  margin: 1.8em 0;
+  word-wrap: break-word;
+}
+.article-content p img:only-child {
+  display: block;
+  margin: 0 auto;
+}
+.article-content table {
+  /* 1 */
+  border-collapse: collapse;
+  border-spacing: 0;
+  /* 2 */
+  width: 100%;
+  /* 3 */
+  margin-bottom: 15px;
+}
+.article-content * + table {
+  margin-top: 15px;
+}
+.article-content table th,
+.article-content table td {
+  padding: 8px 8px;
+}
+.article-content table th {
+  border-bottom: 1px solid #e5e5e5;
   text-align: center;
-  color: #ffffff;
-  text-shadow: 1px 1px 3px #000;
-  font-family: 'Oswald', 'Adobe 繁黑體 Std', 'AdobeFanHeitiStd-Bold', 'LiHei Pro', "Xin6", '微軟正黑體', sans-serif;
 }
-.feature-block h1,
-.feature-block h2,
-.feature-block h3,
-.feature-block h4 {
+.article-content table td {
+  vertical-align: top;
+  border-bottom: 1px solid #e5e5e5;
+}
+.article-content table thead th {
+  vertical-align: bottom;
+}
+.article-content table caption,
+.article-content table tfoot {
+  font-size: 12px;
+  font-style: italic;
+}
+.article-content table caption {
+  text-align: left;
+  color: #999999;
+}
+.article-content table,
+.article-content td {
+  vertical-align: middle;
+}
+.article-content tbody tr:nth-of-type(odd) {
+  background: #f5f5f5;
+}
+.article-content td {
+  padding: 4px 8px;
+}
+.article-content pre > code.hljs {
+  margin: -10px;
+  padding: 20px;
+  font-size: 15px;
+  font-family: "monako", consolas, monspace;
+}
+.article-author-profile {
+  margin-top: 70px;
+}
+#control-tools h4 {
+  display: none;
+}
+#control-tools .dashboard-button {
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  display: inline-block;
   color: #fff;
-  margin-top: 1em;
+  font-weight: 800;
+  background-color: #000000;
+  opacity: .2;
+  padding: 3px 6px;
+  border-radius: 5px;
 }
-.feature-block h2 {
-  font-size: 36px;
-}
-#what-we-do {
-  background-color: #999;
-  background: url(../media/img/banner/feature-1.jpg) center center no-repeat;
-}
-#what-we-do h1,
-#what-we-do h2,
-#what-we-do h3,
-#what-we-do h4 {
-  margin-top: 1em;
-}
-#our-feature {
-  background-color: #666;
-  background: url(../media/img/banner/feature-2.jpg) center center no-repeat;
-}
-#our-concept {
-  background-color: #999;
-  background: url(../media/img/banner/feature-3.jpg) center center no-repeat;
-}
-.basic-layout h1,
-.basic-layout h2,
-.basic-layout h3 {
-  text-align: center;
-}
-.basic-layout article.article-content {
-  margin-top: 50px;
-}
-.courses-layout h2.category-title {
-  margin-top: 50px;
-}
-.courses-layout .course-item {
-  margin-top: 30px;
-}
-.course-logo {
-  margin-bottom: 50px;
-  width: 550px;
+#control-tools .dashboard-button:hover {
+  text-decoration: none;
+  opacity: 1;
 }
 #footer {
   margin-top: 50px;
