--- a/www/media/css/front/default.less
+++ b/www/media/css/front/default.less
@@ -172,7 +172,7 @@ dl {
 	}
 
 	.uk-navbar-brand {
-		height: auto;
+		height: 70px;
 	}
 
 	.uk-navbar-brand img {
@@ -273,6 +273,10 @@ dl {
 		width: 100%;
 		color: #fff;
 		text-align: center;
+
+		.uk-navbar-brand {
+			height: auto;
+		}
 
 		#blog-title {
 			display: block;
@@ -520,6 +524,12 @@ dl {
 
 .article-author-profile {
 	margin-top: 70px;
+
+	.profile-link {
+		&:hover {
+			text-decoration: none;
+		}
+	}
 }
 
 #control-tools {
