--- a/www/media/css/front/default.css
+++ b/www/media/css/front/default.css
@@ -427,7 +427,7 @@ dl dd {
   font-weight: 800;
   background-color: #000000;
   opacity: .2;
-  padding: 3px 6px;
+  padding: 3px 6px 7px 6px;
   border-radius: 5px;
 }
 #control-tools .dashboard-button:hover {
