--- a/www/media/css/front/default.less
+++ b/www/media/css/front/default.less
@@ -546,7 +546,7 @@ dl {
 		font-weight: 800;
 		background-color: rgb(0,0,0);
 		opacity: .2;
-		padding: 3px 6px;
+		padding: 3px 6px 7px 6px;
 		border-radius: 5px;
 
 		&:hover {
