--- a/www/media/css/site/site.less
+++ b/www/media/css/site/site.less
@@ -212,7 +212,8 @@ dl {
 			color: #fff;
 			opacity: .8;
 
-			&:hover {
+			&:hover,
+			&:focus {
 				background: transparent;
 				opacity: 1;
 			}
