--- a/www/media/css/site/site.css
+++ b/www/media/css/site/site.css
@@ -157,7 +157,8 @@ dl dd {
   color: #fff;
   opacity: .8;
 }
-#header a:hover {
+#header a:hover,
+#header a:focus {
   background: transparent;
   opacity: 1;
 }
